methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: '=' expected but identifier found.
def fait V(c:Color) {
         ^PatternPicture:8: error: illegal start of simple expression
}
^