methods.picture.PatternPicture.scala.code
override def run() {
}

def fait V(c:Color) {
  
}